# Ai

./: .gitignore  .replit  contact.php  index.html  package-lock.json  pyproject.toml  settings.json  setup.py  systimz-main.js
life_management_agency/: ....enwv.example  .env.temp  README.md  __init__.py  agency.py  agency_manifesto.md  base_agent.py  interface.py  jest.config.js  middleware.ts  next.config.js  package-lock.json  package.json  requirements.txt  run.bat  settings.json  setup.py  tailwind.config.js  test_server.py  tsconfig.json
life_management_agency/.next/: build-manifest.json  trace
life_management_agency/components/: ErrorBoundary.tsx  LifeAssistantApp.tsx  Navigation.tsx
life_management_agency/docs/: README.md  agents.md  api.md  architecture.md  completedTasks.md  currentTask.md  deployment_checklist.md  development.md  github-oauth-setup.md  gradio_integration.md  implementation_status.md  production.md  projectRoadmap.md  project_overview.md  techStack.md  ui.md
life_management_agency/family_coach_agent/: __init__.py  family_coach_agent.py  instructions.md
life_management_agency/health_agent/: __init__.py  health_agent.py  instructions.md
life_management_agency/knowledge_agent/: __init__.py  instructions.md  knowledge_agent.py
life_management_agency/lifestyle_agent/: __init__.py  instructions.md  lifestyle_agent.py
life_management_agency/master_agent/: __init__.py  instructions.md  master_agent.py
life_management_agency/pages/: _app.tsx  _document.tsx  call.tsx  chat.tsx  home.tsx  index.tsx  life-assistant-pages.tsx  privacy.tsx  (+5 more)
(+62 files in other folders)
